...
                    .tag(AppTab.main)

                    NavigationStack(path: $router.cartPath) {
                        CartScreen()
                    }
                    .tabItem {
                        Label("Корзина", systemImage: "cart")
                    }
                    .badge(cartBadgeText)
                    .tag(AppTab.cart)
                }
                .fullScreenCover(item: $router.presentedAr, onDismiss: {
                    router.dismissAr()
...
